# art-api

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260515_0001_initial_schema.py  20260527_0002_add_category_description.py  20260528_0003_add_artwork_media_fields.py  20260528_0004_add_artwork_likes.py  20260529_0005_add_user_phone_login.py  20260530_0006_add_artwork_sales_fields.py  20260531_0007_add_cart_items.py  20260601_0008_add_orders.py  20260602_0009_add_admin_avatar.py  20260602_0010_add_admin_password_flag.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin_admins.py  admin_artists.py  admin_artworks.py  admin_auth.py  admin_categories.py  admin_dashboard.py  admin_uploads.py  artworks.py  cart.py  categories.py  health.py  orders.py  users.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  admin.py  artist.py  artwork.py  artwork_image.py  artwork_like.py  artwork_view.py  base.py  cart_item.py  category.py  exhibition.py  exhibition_artwork.py  favorite.py  operation_log.py  order.py  user.py
app/schemas/: admin.py  artist.py  artwork.py  auth.py  cart.py  category.py  common.py  dashboard.py  order.py  user.py
docs/: api-guide.md  database-erd.md
scripts/: allow-miniapp-lan.ps1
tests/: test_admin_admins.py  test_admin_artists.py  test_admin_artworks.py  test_admin_auth.py  test_admin_categories.py  test_admin_dashboard.py  test_categories.py  test_health.py
