[project]
name = "art-api"
version = "0.1.0"
description = "FastAPI backend for the art platform"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "argon2-cffi>=23.1.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
  "psycopg[binary]>=3.2.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
